--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <ul>
         <li>café</li>
         <li>Filtro de café</li>
-        <li>Bolo de chocolate</li>
+        <li>Bolo de morango</li>
         <li>Energético</li>
     </ul>
 
